# bRPC-Project-Template

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yaml
client/: CMakeLists.txt  client.cpp
proto/: echo.proto  msg.proto
server/: CMakeLists.txt  server.cpp
